[gd_scene load_steps=7 format=2]

[ext_resource path="res://BlasterGuy.gd" type="Script" id=1]
[ext_resource path="res://art/icon.png" type="Texture" id=2]
[ext_resource path="res://GuyCollisionShape2D.gd" type="Script" id=3]
[ext_resource path="res://art/blast.wav" type="AudioStream" id=4]
[ext_resource path="res://art/damaged.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31.5 )

[node name="BlasterGuy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ShotCooldownTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GuyCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
script = ExtResource( 3 )

[node name="GuySprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="ShootHoldTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BlastSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
